# llmops

./: README.md
basics/: README.md  makefile  pyproject.toml
basics/src/: bpe.ipynb
basics/src/.ipynb_checkpoints/: bpe-checkpoint.ipynb
